--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,16 @@
   <groupId>one.digitalinnovationone</groupId>
   <artifactId>bootcampsantander</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.26</version>
+    </dependency>
+  </dependencies>
+
+
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
